package market_proto;

message Order {
    required int64 order_id = 1;
    required string instrument = 2;
    required int64 quantity = 3;
    required float price = 4;

    enum OrderWay {
        BUY = 0;
        SELL = 1;
    }
    required OrderWay way = 5;

    enum OrderType {
        NEW = 0;
        MODIFY = 1;
        CANCEL = 2;
    }
    required OrderType order_type = 6;
    
}

message UpdateOrder {

    required int64 order_id = 1;

    enum OrderStatus {
        ACK = 0;
        NACK = 1;
        FILLED = 2;
    }

    required OrderStatus status = 2;

    optional int32 exec_qty = 3;

    optional int32 remaining_qty = 4;

    optional float exec_price = 5;

    optional string message = 6;

}

message ConnectionRequest {
    required int64 client_id = 1;

    required string password = 2;
}

message ConnectionResponse {

    enum SessionStatus {
        ACCEPTED  = 0;
        REJECTED = 1;
    }

    required SessionStatus status = 1;

    optional string message = 2;

}